--- a/package.json
+++ b/package.json
@@ -3,19 +3,33 @@
   "name": "gatsby-starter-default",
   "version": "1.0.0",
   "dependencies": {
+    "axios": "^0.19.2",
     "gatsby": "^2.18.14",
-    "gatsby-image": "^2.0.15",
+    "gatsby-alias-imports": "^1.0.4",
+    "gatsby-env-variables": "^1.0.4",
+    "gatsby-image": "^2.2.40",
+    "gatsby-plugin-dynamic-routes": "^1.0.0",
     "gatsby-plugin-manifest": "^2.0.5",
+    "gatsby-plugin-page-creator": "^2.1.40",
+    "gatsby-plugin-provide-react": "^1.0.0",
     "gatsby-plugin-react-helmet": "^3.0.0",
+    "gatsby-plugin-sass": "^2.1.28",
+    "gatsby-plugin-sharp": "^2.4.5",
+    "gatsby-source-filesystem": "^2.1.48",
+    "gatsby-transformer-sharp": "^2.3.14",
+    "mongodb": "^3.5.2",
+    "node-sass": "^4.13.1",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0"
   },
   "devDependencies": {
-    "@now/node": "^1.3.0"
+    "@now/node": "^1.3.0",
+    "@types/mongodb": "^3.3.15"
   },
   "scripts": {
-    "dev": "gatsby develop",
+    "start": "now dev",
+    "start:front": "gatsby develop",
     "build": "gatsby build"
   }
 }
