--- a/tsconfig.json
+++ b/tsconfig.json
@@ -58,6 +58,20 @@
     /* Experimental Options */
     // "experimentalDecorators": true,        /* Enables experimental support for ES7 decorators. */
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "baseUrl": "./src",
+    "paths": {
+      "components/*": ["./components/*"],
+      "constants/*": ["./constants/*"],
+      "containers/*": ["./containers/*"],
+      "ducks/*": ["./ducks/*"],
+      "enhancers/*": ["./enhancers/*"],
+      "layouts/*": ["./layouts/*"],
+      "pages/*": ["./pages/*"],
+      "shared/*": ["./shared/*"],
+      "styles/*": ["./styles/*"],
+      "images/*": ["./images/*"],
+      "utils/*": ["./utils/*"]
+    }
   }
 }
