--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,2 @@
-GATSBY_API_ROOT_URL=https://cors-anywhere.herokuapp.com/https://lbitar.com/api
+# GATSBY_API_ROOT_URL=https://cors-anywhere.herokuapp.com/https://lbitar.com/api
+GATSBY_API_ROOT_URL=/api
