--- a/now.json
+++ b/now.json
@@ -13,9 +13,9 @@
     { "src": "api/**/*.ts", "use": "@now/node" }
   ],
   "routes": [
-    { "src": "/api/users", "dest": "/api/users.ts" },
-    { "src": "/(.*)", "dest": "/$1" },
+    { "src": "/api/(.*)", "dest": "/api/$1.ts" },
     { "handle": "filesystem" },
+    { "src": "/(.*)", "dest": "/$1" },
     { "src": "/.*", "status": 404, "dest": "/404" }
   ]
 }
