--- a/now.json
+++ b/now.json
@@ -15,7 +15,7 @@
   "routes": [
     { "src": "/api/(.*)", "dest": "/api/$1.ts" },
     { "handle": "filesystem" },
-    { "src": "/.*", "status": 404, "dest": "/404" },
-    { "src": "/(.*)", "dest": "/$1" }
+    { "src": "/(.*)", "dest": "/$1" },
+    { "src": "/.*", "status": 404, "dest": "/404" }
   ]
 }
