--- a/package.json
+++ b/package.json
@@ -27,11 +27,15 @@
   },
   "devDependencies": {
     "@now/node": "^1.3.0",
-    "@types/mongodb": "^3.3.15"
+    "@types/mongodb": "^3.3.15",
+    "babel-jest": "^25.1.0",
+    "babel-preset-gatsby": "^0.2.29",
+    "jest": "^25.1.0"
   },
   "scripts": {
     "start": "gatsby develop",
     "start:all": "now dev",
-    "build": "gatsby build"
+    "build": "gatsby build",
+    "test": "jest"
   }
 }
