test: adding e2e tests

--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
-# GATSBY_API_ROOT_URL=https://cors-anywhere.herokuapp.com/https://lbitar.com/api
-GATSBY_API_ROOT_URL=/api
+GATSBY_API_ROOT_URL=https://cors-anywhere.herokuapp.com/https://lbitar.com/api
+# GATSBY_API_ROOT_URL=/api
