--- a/package.json
+++ b/package.json
@@ -27,15 +27,19 @@
   },
   "devDependencies": {
     "@now/node": "^1.3.0",
+    "@testing-library/cypress": "^5.3.0",
     "@types/mongodb": "^3.3.15",
     "babel-jest": "^25.1.0",
     "babel-preset-gatsby": "^0.2.29",
+    "cypress": "^4.0.2",
     "jest": "^25.1.0"
   },
   "scripts": {
     "start": "gatsby develop",
     "start:all": "now dev",
     "build": "gatsby build",
-    "test": "jest"
+    "test": "jest",
+    "e2e": "cypress run",
+    "e2e:open": "cypress open"
   }
 }
